# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.

  07 Nov 2004; Brian Harring <ferringb@gentoo.org> pym/portage.py: tweaked
  portage.exit_callbacks so it's more flexible.  
  Call portage.append_exit_callback to append to it, optionally specifying args
  and keyword args.

  07 Nov 2004; Brian Harring <ferringb@gentoo.org> pym/portageq.py, bin/portageq:
  Tied portageq script into using the portageq module.

  07 Nov 2004; Brian Harring <ferringb@gentoo.org> bin/repoman: converted repoman
  over to using the users preferred fetcher (via portage.get_preferred_fetcher,
  oddly enough).

  07 Nov 2004; Brian Harring <ferringb@gentoo.org> pym/transports/fetchcommmand.py:
  corrected an issue where it wasn't correctly parsing out an appropriate distdir
  when file_name was specified.

  07 Nov 2004; Brian Harring <ferringb@gentoo.org> bin/ebuild-default-functions.sh: 
  addition of INSTALL_MASK support to dyn_preinst.   #67190

  07 Nov 2004; Brian Harring <ferringb@gentoo.org> pym/portage_db_flat.py: added a
  mtime cache to revert the the # of stats to 1 for aux_get calls (which calls 
  get_timestamp).

  07 Nov 2004; Brian Harring <ferringb@gentoo.org> pym/portage_exec.py, sync/rsync.py:
  Bug fixes for selinux.setexec typo, and noisy rsync.  Aside from that, a collection
  of header updates.

  07 Nov 2004; Brian Harring <ferringb@gentoo.org> pym/portage_util.py,pym/portage.py:
  tweak to make movefile not implode, and get_preferred_fetcher not implode.

  07 Nov 2004; Brian Harring <ferringb@gentoo.org> pym/portage_metadata.py, 
  pym/orig_dict_cache.py, pym/portage.py, pym/portage_util.py: Added missing 